--- a/composer.json
+++ b/composer.json
@@ -11,17 +11,18 @@
     "ext-pdo": "*",
     "ext-simplexml": "*",
     "composer-runtime-api": "^2.0.0",
-    "ramsey/uuid": "^4.7.3",
-    "symfony/console": "^v6.2.5"
+    "ramsey/uuid": "^4.7.4",
+    "symfony/console": "^v6.2.8"
   },
   "require-dev": {
     "ext-dom": "*",
     "ext-tokenizer": "*",
     "ext-xmlwriter": "*",
-    "mimmi20/coding-standard": "4.0.0-beta.6",
-    "phpstan/extension-installer": "^1.2.0",
-    "phpstan/phpstan": "^1.10.2",
-    "phpstan/phpstan-deprecation-rules": "^1.1.2"
+    "mimmi20/coding-standard": "^5.0.0",
+    "phpstan/extension-installer": "^1.3.0",
+    "phpstan/phpstan": "^1.10.14",
+    "phpstan/phpstan-deprecation-rules": "^1.1.3",
+    "rector/rector": "^0.15.25"
   },
   "minimum-stability": "stable",
   "prefer-stable": true,
