--- a/composer.json
+++ b/composer.json
@@ -19,10 +19,12 @@
     "ext-tokenizer": "*",
     "ext-xmlwriter": "*",
     "mimmi20/coding-standard": "^5.0.0",
+    "nikic/php-parser": "^v4.15.4",
     "phpstan/extension-installer": "^1.3.0",
     "phpstan/phpstan": "^1.10.14",
     "phpstan/phpstan-deprecation-rules": "^1.1.3",
-    "rector/rector": "^0.15.25"
+    "rector/rector": "^0.15.25",
+    "vimeo/psalm": "^5.11.0"
   },
   "minimum-stability": "stable",
   "prefer-stable": true,
