--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -65,6 +65,9 @@ categories:
   - title: "**🧹 Maintenance:**"
     labels:
       - "maintenance"
+  - title: "**📦 Documentation:**"
+    labels:
+      - "documentation"
   # other Labels to mimmi20/useragent-parser-comparison
   #- title: "**📦 new Useragents:**"
   #  labels:
