--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,7 @@
         "mimmi20/coding-standard": "^2.6.0",
         "phpstan/extension-installer": "^1.1.0",
         "phpstan/phpstan": "^1.3.3",
-        "phpstan/phpstan-deprecation-rules": "^1.0.0",
-        "vimeo/psalm": "^v4.18.1"
+        "phpstan/phpstan-deprecation-rules": "^1.0.0"
     },
     "minimum-stability": "stable",
     "prefer-stable": true,
