--- a/parsers/browser-detector/composer.json
+++ b/parsers/browser-detector/composer.json
@@ -3,9 +3,9 @@
     "php": "^8.1.0",
     "composer-runtime-api": "^2.0",
     "mimmi20/browser-detector": "dev-updates as 7.0.5",
-    "psr/log": "^1.1.4 || ^3.0.0",
-    "monolog/monolog": "^2.3.5",
-    "matthiasmullie/scrapbook": "^1.4.8"
+    "psr/log": "^3.0.0",
+    "monolog/monolog": "^3.5.0",
+    "matthiasmullie/scrapbook": "^1.5.1"
   },
   "config": {
     "preferred-install": "dist",
