--- a/parsers/browscap-php/composer.json
+++ b/parsers/browscap-php/composer.json
@@ -3,7 +3,8 @@
     "php": "^8.1.0",
     "composer-runtime-api": "^2.0.0",
     "browscap/browscap-php": "7.3.x-dev",
-    "psr/log": "^1.1.4 || ^3.0.0",
+    "mimmi20/browser-detector-version": "^9.0.3",
+    "psr/log": "^3.0.0",
     "symfony/console": "^v5.4.0 || ^6.0.1",
     "symfony/filesystem": "^v5.4.0 || ^6.0.0",
     "matthiasmullie/scrapbook": "^1.4.8",
