--- a/parsers/matomo-device-detector/composer.json
+++ b/parsers/matomo-device-detector/composer.json
@@ -3,7 +3,9 @@
     "php": "^8.1.0",
     "composer-runtime-api": "^2.0",
     "matomo/device-detector": "^6.1.5",
-    "matthiasmullie/scrapbook": "^1.4.8"
+    "matthiasmullie/scrapbook": "^1.4.8",
+    "mimmi20/browser-detector-version": "^9.0.3",
+    "psr/log": "^3.0.0"
   },
   "config": {
     "preferred-install": "dist",
