--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,5 +1,7 @@
 parameters:
-  level: 1
+  level: max
+
+  phpVersion: 80300 # PHP 8.3
 
   parallel:
     maximumNumberOfProcesses: 1
@@ -7,8 +9,7 @@ parameters:
 
   paths:
     - src
-    - bin
-    - mappings
+    - tests
 
   scanFiles:
     - %currentWorkingDirectory%/vendor/autoload.php
@@ -16,7 +17,7 @@ parameters:
     - %currentWorkingDirectory%/vendor/squizlabs/php_codesniffer/src/Util/Tokens.php
 
   # reports occurrences of type-checking functions always evaluated to true
-  checkAlwaysTrueCheckTypeFunctionCall: true
+  checkAlwaysTrueCheckTypeFunctionCall: false # todo: fix
 
   # reports instanceof occurrences always evaluated to true
   checkAlwaysTrueInstanceof: true
@@ -36,11 +37,8 @@ parameters:
   # reports function and method calls with incorrect name case
   checkFunctionNameCase: true
 
-  # it requires type variables always be specified in typehints
-  checkGenericClassInNonGenericObjectType: false
-
   # be strict about values with an unspecified (implicit mixed) type
-  checkImplicitMixed: true
+  checkImplicitMixed: false # todo: fix
 
   # reports references to built-in classes with incorrect name case
   checkInternalClassCaseSensitivity: true
@@ -56,6 +54,9 @@ parameters:
 
   # reports properties with native types that weren’t initialized in the class constructor
   checkUninitializedProperties: true
+
+  # reports missing #[\Override] attribute
+  checkMissingOverrideMethodAttribute: true
 
   # doesn’t require typehints for properties if the types can be inferred from constructor injection
   inferPrivatePropertyTypeFromConstructor: false
@@ -73,7 +74,7 @@ parameters:
   reportMaybesInMethodSignatures: true
 
   # reports violations of property type invariance
-  reportMaybesInPropertyPhpDocTypes: true
+  reportMaybesInPropertyPhpDocTypes: false # todo: fix
 
   # reports violations of parameter type contravariance and return type covariance in static methods
   reportStaticMethodSignatures: true
@@ -95,5 +96,65 @@ parameters:
       missingCheckedExceptionInThrows: true
       tooWideThrowType: true
 
+  cognitive_complexity:
+    class: 3
+    function: 3
+
+  type_coverage:
+    return_type: 100
+    param_type: 100
+    property_type: 100
+    constant_type: 100
+    # also, how many files has declare strict types
+    declare: 100
+
+  unused_public:
+    methods: true
+    properties: true
+    constants: true
+    local_methods: true
+
+  type_perfect:
+    null_over_false: true
+    no_mixed: true
+    narrow_param: true
+
 #  ignoreErrors:
-#    - '~Useless \@throws~'
+#    - '~Strict comparison using === between false and string will always evaluate to false~'
+
+rules:
+  # code complexity
+  - Symplify\PHPStanRules\Rules\NoDynamicNameRule
+  # - Symplify\PHPStanRules\Rules\NoReturnArrayVariableListRule # todo: fix
+
+  - Symplify\PHPStanRules\Rules\ForbiddenExtendOfNonAbstractClassRule
+
+  # domain
+  - Symplify\PHPStanRules\Rules\Domain\RequireExceptionNamespaceRule
+  - Symplify\PHPStanRules\Rules\Domain\RequireAttributeNamespaceRule
+  - Symplify\PHPStanRules\Rules\Enum\RequireUniqueEnumConstantRule
+  - Symplify\PHPStanRules\Rules\PreventParentMethodVisibilityOverrideRule
+
+  # paths
+  - Symplify\PHPStanRules\Rules\NoReferenceRule
+
+  # explicit naming
+  - Symplify\PHPStanRules\Rules\ForbiddenMultipleClassLikeInOneFileRule
+
+  - Symplify\PHPStanRules\Rules\Complexity\ForbiddenArrayMethodCallRule
+  # - Symplify\PHPStanRules\Rules\CheckRequiredInterfaceInContractNamespaceRule
+
+  # naming
+  - Symplify\PHPStanRules\Rules\RequireAttributeNameRule
+
+  # regexes
+  - Symplify\PHPStanRules\Rules\AnnotateRegexClassConstWithRegexLinkRule
+  # - Symplify\PHPStanRules\Rules\NoInlineStringRegexRule # todo fix
+  # - Symplify\PHPStanRules\Rules\RegexSuffixInRegexConstantRule # todo fix
+
+  # naming
+  - Symplify\PHPStanRules\Rules\Explicit\ExplicitClassPrefixSuffixRule
+  - Symplify\PHPStanRules\Rules\NoReturnSetterMethodRule
+  - Symplify\PHPStanRules\Rules\UppercaseConstantRule
+  - Symplify\PHPStanRules\Rules\ClassNameRespectsParentSuffixRule
+  - Symplify\PHPStanRules\Rules\CheckClassNamespaceFollowPsr4Rule
