--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,6 @@
     "ext-json": "*",
     "ext-mbstring": "*",
     "ext-pdo": "*",
-    "ext-simplexml": "*",
     "composer-runtime-api": "^2.0.0",
     "ramsey/uuid": "^4.7.4",
     "symfony/console": "^v6.2.8"
@@ -19,7 +18,7 @@
     "ext-tokenizer": "*",
     "ext-xmlwriter": "*",
     "mimmi20/coding-standard": "^5.0.0",
-    "nikic/php-parser": "^v4.15.4",
+    "nikic/php-parser": "^4.15.4",
     "phpstan/extension-installer": "^1.3.0",
     "phpstan/phpstan": "^1.10.15",
     "phpstan/phpstan-deprecation-rules": "^1.1.3",
@@ -34,14 +33,14 @@
     }
   },
   "config": {
-    "preferred-install": "dist",
-    "sort-packages": true,
     "allow-plugins": {
+      "composer/package-versions-deprecated": true,
       "dealerdirect/phpcodesniffer-composer-installer": true,
-      "phpstan/extension-installer": true,
-      "composer/package-versions-deprecated": true
+      "phpstan/extension-installer": true
     },
-    "lock": false
+    "lock": false,
+    "preferred-install": "dist",
+    "sort-packages": true
   },
   "scripts": {
     "php-cs-fixer-check": "php-cs-fixer fix --dry-run -vv",
