--- a/parsers/browscap-php/composer.json
+++ b/parsers/browscap-php/composer.json
@@ -1,6 +1,6 @@
 {
   "require": {
-    "php": "^8.1.0",
+    "php": "~8.3.0 || ~8.4.0 || ~8.5.0",
     "composer-runtime-api": "^2.0.0",
     "browscap/browscap-php": "^7.5.0",
     "psr/log": "^1.1.4 || ^3.0.0",
